remove search at navbar Retrieve image src from database

--- a/Team3Shopping/Views/Gallery/Product.cshtml
+++ b/Team3Shopping/Views/Gallery/Product.cshtml
@@ -27,7 +27,7 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="@thisProduct.ProductImage" alt="..." />
+                        <img style="max-height:300px" class="card-img-top" src="@thisProduct.ProductImage" alt="..." />
                         <!-- Product details-->
                         <!-- Product actions-->
 
@@ -47,7 +47,7 @@
                 <div style="font-size:14px;"><b>(@avgRatings)</b>  @reviewCount reviews <br /></div>
 
                 <div class="col star-ratings">
-                    <div class="fill-ratings" style="width: @ratingPct %;">
+                    <div class="fill-ratings" style="width: @ratingPct%;">
                         <span>★★★★★</span>
                     </div>
                     <div class="empty-ratings">
