redirect to purchaseHistory/index

--- a/Team3Shopping/Views/Cart/PurchaseDone.cshtml
+++ b/Team3Shopping/Views/Cart/PurchaseDone.cshtml
@@ -7,7 +7,7 @@
 
 <p style="text-align:center">We're processing your order now. You will receive an email confirmation shortly.</p>
 
-<p style="text-align:center">Please visit <a href="@Url.Action("Test","PurchaseHistory")">My Purchases</a> to retrieve the activation code.</p>
+<p style="text-align:center">Please visit <a href="@Url.Action("Index","PurchaseHistory")">My Purchases</a> to retrieve the activation code.</p>
 
 <h4 style="text-align:center">Thank You for choosing WhiteStar</h4>
 
