rename select message

--- a/Team3Shopping/Views/PurchaseHistory/Index.cshtml
+++ b/Team3Shopping/Views/PurchaseHistory/Index.cshtml
@@ -60,7 +60,7 @@
 
                                 <div class="col mb-5" , style="text-align:center">
                                     <select class="custom-select" , style="text-align:center">
-                                        <option selected>Activation Code</option>
+                                        <option selected>Select Activation Code...</option>
                                         @{
                                             for (int j = 0; j < prod.Value; j++)
                                             {
