--- a/Team3Shopping/Views/Shared/_Layout.cshtml
+++ b/Team3Shopping/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="PurchaseHistory" asp-action="Test">My Purchases</a>
+                                <a class="nav-link" asp-controller="PurchaseHistory" asp-action="Index">My Purchases</a>
                             </li>
 
                             <li class="nav-item">
