Fixed the middleware bug!! Thanks Diego!

--- a/Team3Shopping/Views/Gallery/Index.cshtml
+++ b/Team3Shopping/Views/Gallery/Index.cshtml
@@ -43,7 +43,7 @@
                         <div class="card h-100">
                             <!-- Product image-->
                             <a asp-controller="Gallery" asp-action="Product" asp-route-id="@myproduct.ProductName">
-                                <img style="height:100px " class="card-img-top" src="@myproduct.ProductImage" alt="..." />
+                                <img style="height:100px " class="card-img-top" style="background"src="@myproduct.ProductImage" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
