update with no purchase message if no products purchased by account

--- a/Team3Shopping/Views/PurchaseHistory/Index.cshtml
+++ b/Team3Shopping/Views/PurchaseHistory/Index.cshtml
@@ -15,9 +15,18 @@
 }
 
 <div class="container">
+    @{
+        if (allProdList.Count == 0)
+        {
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                <h2>No products purchased yet!</h2>
+            </div>
+        }
+     }
     <!-- Section-->
     <section class="py-5">
         <div class="container">
+
             @{
                 int i = 0;
                 foreach (Dictionary<Product, int> prodList in allProdList)
@@ -76,8 +85,6 @@
                             </div>
 
                         </div>
-
-
                     }
                 }
             }
