--- a/Team3Shopping/Views/PurchaseHistory/Index.cshtml
+++ b/Team3Shopping/Views/PurchaseHistory/Index.cshtml
@@ -18,9 +18,11 @@
     @{
         if (allProdList.Count == 0)
         {
-            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                <h2>No products purchased yet!</h2>
-            </div>
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                <h3>No products purchased yet!<br/>
+                Visit <a href="@Url.Action("Index","Gallery")">GALLERY</a> and enjoy your shopping with us! </h3>
+
+        </div> 
         }
      }
     <!-- Section-->
